# juno_faucet

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
src/: app.rs  main.rs  state.rs  verify.rs
