[package]
name = "juno_faucet_frontend"
version = "0.2.0"
edition = "2021"
authors = ["LeTurt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.81"
serde_json = "1.0.82"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
bech32 = "0.9.0"
web-sys = { version = "0.3.58", default-features = false, features = ["Response"]}
gloo-net = { version = "0.2.3", default-features = false, features = ["http"] }
futures = "0.3.21"
wasm-bindgen-futures = "0.4.31"
