[package]
name = "juno_faucet_frontend"
version = "0.2.0"
edition = "2021"
authors = ["LeTurt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
serde_json = "1.0.82"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
bech32 = "0.9.0"
web-sys = { version = "0.3.58", features = ["Response"]}
gloo-net = { version = "0.2.3", features = ["http"] }
futures = "0.3.21"
wasm-bindgen-futures = "0.4.31"


[profile.release]
debug = true

